--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,34 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-html, body{
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #333;
-    box-sizing: border-box;
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+/* buttons and links */
+.button {
+    @apply mt-8 text-lg uppercase font-semibold bg-black px-12 py-4 rounded-xl shadow-xl text-white
 }
 
-h1{
-    color: #111
-}
-p{
-    padding: 10px 0px;
+.navlink {
+    @apply block text-center px-8 py-6 text-lg
 }
 
-.button-link{
-    @apply text-lg bg-yellow-300 uppercase px-8 py-2 rounded
-}
-
-/* card */
-.card{
-    @apply bg-white rounded shadow-xl
-}
-
-.car-topbar{
-    @apply flex flex-row justify-between py-2 border-b-2
+.navlink:hover {
+    @apply bg-[#880562]
 }
