--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@
 @import "swiper/css/scrollbar";
 @import "swiper/css/effect-fade";
 
+::-webkit-scrollbar{
+    display: none;
+  }
 html {
   scroll-behavior: smooth;
 }
